--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "dev",
     "require": {
         "friendsofsymfony/user-bundle": "1.3.*",
-        "symfony/form": "2.1.*"
+        "symfony/form": "~2.1"
     },
     "suggest": {
     },
